[package]
name = "rent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.25.0"
egui_extras = { version = "0.25.0", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }
resolve-path = "0.1.0"
